2012-09-03  H.J. Lu  <hongjiu.lu@intel.com>

	Backported from mainline
	2012-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/54335
	* doc/invoke.texi: Add -da and remove -dm.

2012-09-02  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/54369
	* config/mips/mips.c (mips_reorg): Invoke cleanup_barriers before
	calling dbr_schedule.
	* config/sparc/sparc.c (sparc_reorg): Likewise.

2012-08-16  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sol2.h (LINK_ARCH32_SPEC_BASE): Add /lib to default
	linker search path.
	* config/sparc/sol2-bi.h (LINK_ARCH64_SPEC_BASE): Likewise for
	/lib/sparcv9.

2012-08-10  Ulrich Weigand  <ulrich.weigand@linaro.org>

	Backport from mainline
	2012-07-30  Ulrich Weigand  <ulrich.weigand@linaro.org>
		    Richard Earnshaw  <rearnsha@arm.com>

	* target.def (vector_alignment): New target hook.
	* doc/tm.texi.in (TARGET_VECTOR_ALIGNMENT): Document new hook.
	* doc/tm.texi: Regenerate.
	* targhooks.c (default_vector_alignment): New function.
	* targhooks.h (default_vector_alignment): Add prototype.
	* stor-layout.c (layout_type): Use targetm.vector_alignment.
	* config/arm/arm.c (arm_vector_alignment): New function.
	(TARGET_VECTOR_ALIGNMENT): Define.

	* tree-vect-data-refs.c (vect_update_misalignment_for_peel): Use
	vector type alignment instead of size.
	* tree-vect-loop-manip.c (vect_do_peeling_for_loop_bound): Use
	element type size directly instead of computing it from alignment.
	Fix variable naming and comment.

2012-08-09  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-08-09  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_pad_noreturn): Rename to ...
	(alpha_pad_function_end): ... this.  Also insert NOP between
	sibling call and GP load.
	(alpha_reorg): Update call to alpha_pad_function_end.  Expand comment.

2012-07-22  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/33135
	* config/sh/sh.opt (mieee): Use Var instead of Mask.  Correct
	description.