@@ -1,3 +1,12 @@
+2012-09-04  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>
+
+	Backport from 2012-09-04 mainline r190914
+
+	PR target/54220
+	* config/avr/avr.c (TARGET_ALLOCATE_STACK_SLOTS_FOR_ARGS): New
+	define to...
+	(avr_allocate_stack_slots_for_args): ...this new static function.
+
 2012-09-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backported from mainline
